--- a/web.html
+++ b/web.html
@@ -8,6 +8,9 @@
             <h1>
                 Hola mundo
             </h1>
+            <h2>
+                cosa horrible de github 
+            </h2>
         </div>
     </body>
 </html>
